[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentx-research"
version = "0.1.0"
description = "CORE-Bench research reproduction agent for AgentBeats competition"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.38.0",
    "openai>=1.75.0",
    "pypdf>=5.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
